# DSPU-HA

./: LICENSE  README.md
.github/workflows/: ci.yml
controller/: pyproject.toml
controller/src/controller/: __main__.py  app.py  leader.py
specs/: HA_node_controller_v0.md
tests/: pyproject.toml
tests/conformance/: test_ha_v0.py  test_takeover_v0.py
